@@ -1,3 +1,8 @@
+2010-12-08      Evgeny V. Kokovikhin
+
+	* main/Utils/IO/Socket.class.php: try to close socket immediately.
+	see: http://ru.php.net/manual/en/function.socket-close.php#66810
+
 2010-12-02	Evgeny V. Kokovikhin
 
 	* meta/classes/MetaConfiguration.class.php: more informative error messages
